# bottled-shell

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
package/self-extracting/: installer.sh
src/: env.rs  lib.rs  main.rs  shell.rs  systemd.rs
