[package]
name = "bottled-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
libc = "0.2.108"
literal = "0.2.0"
log = "0.4.14"
nix = "0.22.2"
pretty_env_logger = "0.4.0"
thiserror = "1.0.30"
